[tool.poetry]
name = "evaluation"
version = "0.1.0"
description = ""
authors = ["Christina Ludwig <christina.ludwig@uni-heidelberg.de>"]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "^0.10"
openrouteservice = "^2.3"
matplotlib = "^3.5.1"
contextily = "^1.2.0"
jupyter = "^1.0.0"
python-dotenv = "^0.19.2"
PyYAML = "^6.0"
tqdm = "^4.62.3"
ipyleaflet = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
